# everybody_codes

./: .gitignore  README.md  update_readmes.py
python/: README.md  conftest.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  test_all_puzzles.py
python/2024_the_kingdom_of_algorithmia/: README.md  ec2024template.py
python/2024_the_kingdom_of_algorithmia/01_the_battle_for_the_farmlands/: README.md  ec202401.py  test_ec202401.py
python/2024_the_kingdom_of_algorithmia/02_the_runes_of_power/: README.md  ec202402.py  example_p2.txt  test_ec202402.py
python/2024_the_kingdom_of_algorithmia/03_mining_maestro/: README.md  ec202403.py  test_ec202403.py
python/2024_the_kingdom_of_algorithmia/04_royal_smiths_puzzle/: README.md  ec202404.py  test_ec202404.py
python/2024_the_kingdom_of_algorithmia/05_pseudo-random_clap_dance/: README.md  ec202405.py  ec202405_immutable.py  ec202405_mutable.py  test_ec202405.py
python/2024_the_kingdom_of_algorithmia/06_the_tree_of_titans/: README.md  ec202406.py  test_ec202406.py
python/2024_the_kingdom_of_algorithmia/07_not_fast_but_furious/: README.md  ec202407.py  test_ec202407.py
python/2024_the_kingdom_of_algorithmia/08_a_shrine_for_nullpointer/: README.md  ec202408.py  test_ec202408.py
python/2024_the_kingdom_of_algorithmia/09_sparkling_bugs/: README.md  ec202409.py  example_p3.txt  test_ec202409.py
python/2024_the_kingdom_of_algorithmia/10_shrine_needs_to_shine/: README.md  ec202410.py  test_ec202410.py
python/2024_the_kingdom_of_algorithmia/11_biological_warfare/: README.md  (+2 more)
python/src/: README.md
(+166 files in other folders)
