[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name         = "ecodes"
version      = "0.0.1"
dependencies = []

[tool.setuptools]
packages = ["ecodes"]

[tool.pytest.ini_options]
addopts             = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.ruff]

[tool.docformatter]
recursive         = true
wrap-descriptions = 0
