[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
name = "everybody_codes"
version = "0.1.0"
description = "Solutions to the wonderful Everybody Codes puzzles"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "gahllenges",
    "parse>=1.20.2",
    "pillow>=12.0.0",
    "pydantic>=2.11.9",
]

[project.scripts]
ec = "everybody_codes.__main__:main"

[dependency-groups]
cli = ["configaroo>=0.6.1", "cyclopts>=3.24.0", "rich>=14.1.0"]
dev = ["ipython>=9.5.0", "ruff>=0.13.1"]

[tool.uv.sources]
gahllenges = { path = "../../gahllenges", editable = true }

[tool.uv.workspace]
members = [
    "tull",
]
